--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -167,11 +167,11 @@
   <string name="list_rotation_land">Behartu horizontala</string>
   <string name="list_rotation_port">Behartu bertikala</string>
   <string name="list_rotation_auto">Automatikoa</string>
-  <string name="list_camera_ctrlaspace">Ktrl+A ondoren zuriunea</string>
-  <string name="list_camera_ctrla">Ktrl+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Ezer ez</string>
+  <string name="list_hwbutton_ctrlaspace">Ktrl+A ondoren zuriunea</string>
+  <string name="list_hwbutton_ctrla">Ktrl+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Ezer ez</string>
   <string name="list_delkey_backspace">Atzera tekla</string>
   <string name="list_delkey_del">Ezabatu</string>
   <string name="delete_message">Ziur zaude \'%1$s\' ezabatu nahi duzula?</string>
