--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -167,11 +167,11 @@
   <string name="list_rotation_land">Forza orizzontale</string>
   <string name="list_rotation_port">Forza verticale</string>
   <string name="list_rotation_auto">Automatica</string>
-  <string name="list_camera_ctrlaspace">Ctrl+A poi Spazio</string>
-  <string name="list_camera_ctrla">Ctrl+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Niente</string>
+  <string name="list_hwbutton_ctrlaspace">Ctrl+A poi Spazio</string>
+  <string name="list_hwbutton_ctrla">Ctrl+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Niente</string>
   <string name="list_delkey_backspace">Barra Spaziatrice</string>
   <string name="list_delkey_del">Elimina</string>
   <string name="delete_message">Sei sicuro di voler eliminare \'%1$s\'?</string>
