--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -167,11 +167,11 @@
   <string name="list_rotation_land">Forceer landschap</string>
   <string name="list_rotation_port">Forceer portret</string>
   <string name="list_rotation_auto">Automatisch</string>
-  <string name="list_camera_ctrlaspace">Ctrl+A en dan Spatie</string>
-  <string name="list_camera_ctrla">Ctrl+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Geen</string>
+  <string name="list_hwbutton_ctrlaspace">Ctrl+A en dan Spatie</string>
+  <string name="list_hwbutton_ctrla">Ctrl+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Geen</string>
   <string name="list_delkey_backspace">Backspace</string>
   <string name="list_delkey_del">Verwijderen</string>
   <string name="delete_message">Weet je zeker dat je \'%1$s\' wilt verwijderen?</string>
