--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -177,12 +177,12 @@
   <string name="list_rotation_land">Vynútiť na šírku</string>
   <string name="list_rotation_port">Vynútiť na výšku</string>
   <string name="list_rotation_auto">Automaticky</string>
-  <string name="list_camera_screen_capture">Snímka obrazovky</string>
-  <string name="list_camera_ctrlaspace">Ctrl+A , potom medzerník</string>
-  <string name="list_camera_ctrla">Ctrl+A</string>
-  <string name="list_camera_esc">Klávesa Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Žiadny</string>
+  <string name="list_hwbutton_screen_capture">Snímka obrazovky</string>
+  <string name="list_hwbutton_ctrlaspace">Ctrl+A , potom medzerník</string>
+  <string name="list_hwbutton_ctrla">Ctrl+A</string>
+  <string name="list_hwbutton_esc">Klávesa Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Žiadny</string>
   <string name="list_delkey_backspace">Backspace</string>
   <string name="list_delkey_del">Delete</string>
   <string name="delete_message">Naozaj chcete zmazať \'%1$s\'?</string>
