--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -166,11 +166,11 @@
   <string name="list_rotation_land">Pakota vaakatasoon</string>
   <string name="list_rotation_port">Pakota pystysuuntaan</string>
   <string name="list_rotation_auto">Automaattinen</string>
-  <string name="list_camera_ctrlaspace">Ctrl+A ja välilyönti</string>
-  <string name="list_camera_ctrla">Ctrl+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Ei mitään</string>
+  <string name="list_hwbutton_ctrlaspace">Ctrl+A ja välilyönti</string>
+  <string name="list_hwbutton_ctrla">Ctrl+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Ei mitään</string>
   <string name="list_delkey_backspace">Askelpalautin</string>
   <string name="list_delkey_del">Delete</string>
   <string name="delete_message">Oletko varma että haluat poistaa: \'%1$s\'?</string>
