--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -167,11 +167,11 @@
   <string name="list_rotation_land">Tving landskap</string>
   <string name="list_rotation_port">Tving portrett</string>
   <string name="list_rotation_auto">Automatisk</string>
-  <string name="list_camera_ctrlaspace">Ctrl+A og mellomrom</string>
-  <string name="list_camera_ctrla">Ctrl+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Ingen</string>
+  <string name="list_hwbutton_ctrlaspace">Ctrl+A og mellomrom</string>
+  <string name="list_hwbutton_ctrla">Ctrl+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Ingen</string>
   <string name="list_delkey_backspace">Tilbaketast</string>
   <string name="list_delkey_del">Slett</string>
   <string name="delete_message">Er du sikker på at du vil slette \'%1$s\'?</string>
