Make Volume-Up, Volume-Down, and Search button shortcuts configurable, too and add "Tab" and "CTRL" to list of possible shortcuts.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -94,6 +94,12 @@
   <string name="pref_keymode_summary">Einstellen, wie Alt für \'/\' und Hochstellen für \'Tab\' verwendet werden sollen</string>
   <string name="pref_camera_title">Kamerakürzel</string>
   <string name="pref_camera_summary">Welches Kürzel soll durch Drücken des Kamerauslösers aktiviert werden</string>
+	<string name="pref_volup_title">"Lauter-Kürzel"</string>
+  <string name="pref_volup_summary">Welches Kürzel soll durch Drücken der Lauter-Taste aktiviert werden</string>
+	<string name="pref_voldn_title">"Leiser-Kürzel"</string>
+  <string name="pref_voldn_summary">Welches Kürzel soll durch Drücken des Leiser-Taste aktiviert werden</string>
+	<string name="pref_search_title">"Suchtasten-Kürzel"</string>
+  <string name="pref_search_summary">Welches Kürzel soll durch Drücken der Suchtaste aktiviert werden</string>
   <string name="pref_keepalive_title">Bildschirm anlassen</string>
   <string name="pref_keepalive_summary">Verhindern, dass beim Arbeiten an der Konsole der Bildschirm abgeschaltet wird</string>
   <string name="pref_wifilock_title">WLAN aktiviert lassen</string>
@@ -177,12 +183,14 @@
   <string name="list_rotation_land">Querformat erzwingen</string>
   <string name="list_rotation_port">Hochformat erzwingen</string>
   <string name="list_rotation_auto">Automatisch</string>
-  <string name="list_camera_screen_capture">Screenshot</string>
-  <string name="list_camera_ctrlaspace">Strg+A dann Space</string>
-  <string name="list_camera_ctrla">Strg+A</string>
-  <string name="list_camera_esc">Esc</string>
-  <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Nichts</string>
+  <string name="list_hwbutton_screen_capture">Screenshot</string>
+  <string name="list_hwbutton_ctrl">CTRL</string>
+  <string name="list_hwbutton_tab">Tab</string>
+  <string name="list_hwbutton_ctrlaspace">Strg+A dann Space</string>
+  <string name="list_hwbutton_ctrla">Strg+A</string>
+  <string name="list_hwbutton_esc">Esc</string>
+  <string name="list_hwbutton_esc_a">Esc+A</string>
+  <string name="list_hwbutton_none">Nichts</string>
   <string name="list_delkey_backspace">Rücktaste</string>
   <string name="list_delkey_del">Entfernen</string>
   <string name="delete_message">Soll \'%1$s\' wirklich gelöscht werden?</string>
